--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shopping-list-app",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm run dev --prefix backend\"",
-    "dev:frontend": "npm run dev --prefix frontend",
-    "dev:backend": "npm run dev --prefix backend"
+    "dev:all": "concurrently \"npm run dev:frontend --prefix frontend\" \"npm run dev:backend --prefix backend\"",
+    "dev:frontend": "npm run dev:frontend --prefix frontend",
+    "dev:backend": "npm run dev:backend --prefix backend"
   },
   "devDependencies": {
     "concurrently": "^8.0.0"
